# whisp-away

./: Cargo.toml  README.md  build.nix  flake.nix  git-deps.nix
packaging/nixos/: home-manager.nix  nixos.nix
scripts/: setup-git-hooks.sh  update-git-deps.sh
scripts/git-hooks/: pre-push
src/: helpers.rs  main.rs  recording.rs  socket.rs  tray.rs  typing.rs
src/faster_whisper/: client.rs  daemon.rs  direct.rs
src/faster_whisper/scripts/: transcribe_faster.py  whisper_daemon.py
src/whisper_cpp/: client.rs  daemon.rs  direct.rs
